<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSCarHUD</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Your Current Location is:</string>
    <string name="dummy_directions">Directions</string>

    <string name="title_activity_main">GPS Car HUD</string>

    <!-- PREFERENCES -->
    <!-- Car HUD -->
    <string name="pref_header_carHUD">Car HUD</string>
    <string name="pref_title_open_hud">Open HUD</string>
    <string name="pref_title_navigate">Get Directions</string>
    <string name="pref_error_title">Error</string>
    <string name="pref_error_msg">Invalid Destination Address</string>

    <!-- Destination settings -->
    <string name="pref_header_destination">Destination</string>
    <string name="pref_title_destination">Destination Address</string>

    <!-- Avoidance settings -->
    <string name="pref_header_navigation_options">Navigation Options</string>
    <string name="pref_title_avoid_highways">Avoid Highways</string>
    <string name="pref_title_avoid_tolls">Avoid Tolls</string>
    <string name="pref_title_avoid_uturns">Avoid U-Turns</string>
    <string name="pref_title_avoid_ferries">Avoid Ferries</string>
    
    
    <!-- HUD MODE -->
    <string name="orientation_locked">Locked</string>
    <string name="orientation_unlocked">Unlocked</string>
</resources>
